# camure-ffi

./: CMakeLists.txt  Cargo.toml  README.md  camure.h
examples/: barrier_group_coordinator.c  barrier_group_member.c  broadcast_group_receiver.c  broadcast_group_sender.c
src/: barrier.rs  broadcast.rs  lib.rs  session.rs
