[package]
name = "camure-ffi"
version = "0.1.0"
authors = ["Simon Oehrl"]
edition = "2021"
description = "FFI bindings for the camure crate"
readme = "README.md"
homepage = "https://github.com/soehrl/camure-ffi"
repository = "https://github.com/soehrl/camure-ffi"
license = "MIT/Apache-2.0"
keywords = ["reliable", "multicast", "broadcast", "synchronization", "udp"]
categories = ["network-programming", "concurrency", "api-bindings"]

[lib]
crate-type = ["staticlib"]

[dependencies]
camure = "0.1.1"
